WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117054
[sh4] Fix double floating point transfer in baseline JIT
https://bugs.webkit.org/show_bug.cgi?id=117054
Summary
[sh4] Fix double floating point transfer in baseline JIT
Julien Brianceau
Reported
2013-05-30 16:01:34 PDT
In current implementation, dmovRegReg function transfers only one single FPRegister as PR=1 and SZ=0 in floating point status/control register. So double transfers must be performed with two fmov.s opcodes instead of one fmov opcode.
Attachments
Fix double floating point transfer in sh4 baseline JIT
(1.98 KB, patch)
2013-05-30 16:06 PDT
,
Julien Brianceau
oliver
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Fix double floating point transfer in sh4 baseline JIT (with ChangeLog)
(3.05 KB, patch)
2013-05-31 00:11 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-05-30 16:06:39 PDT
Created
attachment 203391
[details]
Fix double floating point transfer in sh4 baseline JIT
WebKit Commit Bot
Comment 2
2013-05-30 16:40:49 PDT
Comment on
attachment 203391
[details]
Fix double floating point transfer in sh4 baseline JIT Rejecting
attachment 203391
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 203391, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 150990 = 3a9d5ce0e5d6551b2b2f24471ca33137a186d6b3
r150991
= 867209b59d27a858f4a74cad2deb1cd7d2ab7ea3
r150992
= 899992352f0b7b7f0e53c31c8b599892ad46f824 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.appspot.com/results/693331
Julien Brianceau
Comment 3
2013-05-31 00:11:49 PDT
Created
attachment 203411
[details]
Fix double floating point transfer in sh4 baseline JIT (with ChangeLog) Better with a ChangeLog, indeed.
WebKit Commit Bot
Comment 4
2013-05-31 11:21:13 PDT
Comment on
attachment 203411
[details]
Fix double floating point transfer in sh4 baseline JIT (with ChangeLog) Clearing flags on attachment: 203411 Committed
r151031
: <
http://trac.webkit.org/changeset/151031
>
WebKit Commit Bot
Comment 5
2013-05-31 11:21:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug